# ek-korv2

./: .dockerignore  .gitignore  AZURE-SETUP.md  CLAUDE.md  COMPLEXITY-MANAGEMENT.md  DEPLOYMENT.md  LICENSE  README.md  SECURITY.md  STATUS.md  abb-tehnologije-srbija.md  codex-kernel-report-07-01-2026.md  codex-kernel-rtos-comparison-07-01-2026.md  elektrokombinacija-koncept.md  kombinacije-strategije-razvoja.md  razvoj-skaliranje-snage.md  tehnicke-opcije-razvoj.md
.claude/: BILINGUAL-GUIDE.md  settings.local.json
.github/: FUNDING.yml
_archive/: domaci-proizvod-strategija.md  ev-punjaci-komplet-init.md  istrazivanje-init-tecj.md  tehnicki-detalji-komponente.md
blog/: 2026-01-08-hardware-decision-xmc4400.md
c/: CMakeLists.txt
detalji/: 03-gate-driveri.md  06-komunikacija.md  11-hmi.md  12-emc-emi.md
docs/: ekkl-language.md
ek-kor/: CMakeLists.txt
ek-kor-public/: PUBLIC-KEY.asc  README.md
ek-kor/cmake/: EkKorConfig.cmake.in  config.h.in
ek-kor/docs/: PORTING.md  README.md
ek-kor/include/ek-kor/: ek-kor.h  hal.h  ipc.h  kernel.h  mpu.h  scheduler.h  sync.h  task.h  types.h
ek-kor/src/kernel/: fault.c  ipc.c  kernel.c  scheduler.c  sync.c  task.c
ek-kor2/: docker-compose.yml
ek-kor2/c/: CMakeLists.txt
ek-kor2/c/include/ekk/: ekk_gateway.h  ekk_gossip.h  ekk_module.h
ek-kor2/c/src/: ekk_flash_log.c
ek-kor2/c/src/hal/: ekk_hal_tc397.c
ek-kor2/c/src/hal/rpi3/: ekk_hal_rpi3.c  gic.c  libc_stubs.c  mailbox.c  rpi3_hw.h  smp.c
ek-os/: Create-VBoxDisk.ps1  Makefile  README.md  create-disk.ps1  create-fat32.py  create-gpt-disk.py  create-vbox-disk.bat  create-vm.bat  diskpart-script.txt  download-ovmf.ps1  linker.ld  make-iso.bat  patch-efi.py  run-qemu-usb.bat  run-qemu.bat  run-qemu.ps1  setup-qemu.ps1  setup-virtualbox.bat
evidence/: README.md
future/: novelty-rtos-directions.md
hax-demo/: README.md  docker-compose.yml
jova/: 00-analiza-feedback.md  01-risk-matrix.md  02-research-topics.md  03-response-draft.md  STATUS-jovina-unapredjenja.md
nabavka/: 00-EVIDENCIJA-ZAHTEVA.md  00-MEJL-SABLON.txt  EK-NAB-2026-008-Infineon-EMAIL.txt  EK-NAB-2026-008-Infineon-WEBFORM.txt  holandija-bv-oprichten.docx  holandija-bv-oprichten.html  holandija-bv-oprichten.md
ncr-technical-package-2026-01-21/: README.md
patent/: 00-patent-plan.md  01-invention-disclosure-modular-architecture.md  02-invention-disclosure-swap-station.md  03-invention-disclosure-distributed-sparing.md  04-invention-disclosure-fleet-logistics.md  05-invention-disclosure-coordinated-robots.md  COMPETITIVE-RESEARCH-2026-01-02.md  DIY-PRIORITY-PROTECTION.md  EK3-DETAILED-DESIGN.md  FILING-STRATEGY-HYBRID.md  FUNDING-STRATEGY.md  PRIORITY-PROOF-LOG.md  SENSOR-ARCHITECTURE.md  team-skills-matrix.md
pre-hw-dev/: CMakeLists.txt  Dockerfile  README.md  debug-renode.bat  docker-compose.yml
pre-hw-dev-tricore/: CMakeLists.txt  build-ek-kor.sh  build-firmware.sh  hal_tc397xp.s  main.s
pre-hw-dev-tricore/cmake/: as-wrapper.sh  tc397xp.ld  tricore-gcc-wrapper.bat  tricore-gcc-wrapper.cmd  tricore-gcc-wrapper.ps1  tricore-gcc-wrapper.sh  tricore-gcc.cmake
pre-hw-dev-tricore/include/: jezgro_compat.h  tc397xp_regs.h  tc397xp_sfr.h  tricore_intrinsics.h
pre-hw-dev-tricore/src/: bmhd_tc397xp.c  crt0_tc397xp.s  main.c  main.c.bak  startup_tc397xp.c
pre-hw-dev-tricore/src/app/: ek3_control.c
pre-hw-dev-tricore/src/arch/: tricore_cpu.c  tricore_cpu.h  tricore_csa.c  tricore_csa.h  tricore_irq.c  tricore_irq.h  tricore_multicore.c  tricore_multicore.h
pre-hw-dev-tricore/src/hal/: hal.h  hal_tc397xp.c
pre-hw-dev-tricore/src/kernel/: ipc.c  ipc.h  jezgro.h  scheduler.c  scheduler.h  sync.c  sync.h  task.c  task.h
pre-hw-dev/.github/workflows/: ci.yml
pre-hw-dev/cmake/: arm-none-eabi.cmake  stm32g474.ld
pre-hw-dev/docker/: Makefile  run-tests.sh
pre-hw-dev/docs/: INFINEON-XMC-ALTERNATIVE.md  RENODE-DEVELOPMENT.md  SIMULATION-ALL-TARGETS.md  debugging.md  jezgro-je-zivo.md
pre-hw-dev/include/: jezgro_common.h  jezgro_compat.h
pre-hw-dev/renode/: debug.resc  esp32s3.repl  jezgro-esp32.resc  jezgro-stm32.resc  jezgro-xmc.resc  jezgro.resc  stm32g474-full.repl  stm32g474-minimal.repl  stm32g474.repl  swarm-simulation.resc  xmc4400.repl
pre-hw-dev/scripts/: setup-linux.sh  setup-vcan.sh  setup-windows.ps1
pre-hw-dev/sim/: requirements.txt  swarm_simulator.py
pre-hw-dev/src/: firmware_main.c  startup_stm32g474.s
pre-hw-dev/src/app/: ek3_control.h
pre-hw-dev/src/hal/: hal.h  hal_sim.c  hal_stm32.c
pre-hw-dev/src/kernel/: ipc.c  ipc.h  jezgro.h  scheduler.c  scheduler.h  sync.c  sync.h  task.c  task.h
pre-hw-dev/test/: test_main.c
pre-hw-dev/tests/: jezgro.robot
reference/: Rojevi_ Priroda, Tehnika i Primjene.md  calude-opus-simbolic-ai-eexpert-systems.md  case-studies.md  claude-opus-bleading-edge-research.md  claude-opus-neurosimb-roj.md  claude-opus-novelty-proposals.md  claude-opus-roj.md  infineon-srbija-istrazivanje.md  jezgro-research.md  roj-research.md  standardi-protokoli.md  tricore-gcc-toolchain-config-report.md  trziste-analiza.md
renode/: ekk_multi.resc  ekk_test.elf  stm32g474-minimal.repl
rust/: Cargo.toml
simulator/: README.md  docker-compose.yml
spec/: api.md
strategija/: PITCH-PAGE-REVIEW.md  feasibility-analysis.docx  (+7 more)
tcpxxx-emulator/: .gitignore  CHANGELOG-2026-01-08.md  CMakeLists.txt  FEASIBILITY-ANALYSIS.md  README.md  STATUS.md  claude-research1.md  test_elf_load.c
tcpxxx-emulator/include/: elf_loader.h  emu_config.h  emu_types.h  gdb_server.h  gtm.h  ir.h  multicore.h  peripherals.h  scu.h  tc397xp_map.h  trace_log.h  tricore_decode.h  tricore_exec.h  vadc.h
tcpxxx-emulator/src/: main.c
tcpxxx-emulator/src/core/: multicore.c  tricore_cpu.c  tricore_decode.c  tricore_exec.c  tricore_regs.c  tricore_timing.c
tcpxxx-emulator/src/csa/: csa_emulation.c
tcpxxx-emulator/src/debug/: gdb_server.c  trace_log.c
tcpxxx-emulator/src/loader/: elf_loader.c
tcpxxx-emulator/src/memory/: mem_system.c
tcpxxx-emulator/src/peripherals/: asclin.c  ir.c  periph_bus.c  scu.c  stm.c
tcpxxx-emulator/test/: test_decode.c  test_exec.c
(+709 files in other folders)
